--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "express": "^4.17.1",
+    "nuxt": "^2.14.6",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {}
 }
